Making "Hero" responsive

--- a/code/index.html
+++ b/code/index.html
@@ -35,10 +35,14 @@
                 src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8ZWR1Y2F0aW9ufGVufDB8fDB8fHww&auto=format&fit=crop&w=800&q=60">
             <div class="hero-content">
                 <h2 class="hero-heading">Free education for everyone</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ac feugiat sed lectus vestibulum mattis ullamcorper velit sed. Hac habitasse
-                    platea dictumst vestibulum rhoncus est.</p>
-                <button class="hero-button">Read</button>
+                <div class="hero-preview">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ac feugiat sed lectus vestibulum mattis ullamcorper velit sed. Hac
+                        habitasse
+                        platea dictumst vestibulum rhoncus est.</p>
+                    <button class="hero-button">Read</button>
+                </div>
             </div>
         </section>
 
