--- a/code/index.html
+++ b/code/index.html
@@ -40,11 +40,10 @@
           perfect actress to play Barbie. Her beauty, her smile, her talent fits perfect for the role but since this
           project is not about writing real articles I will just fill this out with some gibberish. <br><br />
           By now most of you have probably already stopped reading but if not I can tell you that summer is here (no
-          sh*t Sherlock) so dont forget to wear sunscreen! And if you are a man you have most definitely (a word I
-          always have to google how to spell) stopped reading by now so to all my girlies let me tall y'all a secret:
-          just kidding I have no secret to spare..
+          sh*t Sherlock) so dont forget to wear sunscreen! But if you by any chance made it THIS far, congrats to you!!
+          Fun surprise to know this was not all about Barbie, right?
           <br><br />
-          Anyway, Barbie Barbie Barbie. Can't wait to see it. Good premiere-date tho: july 21s AKA my biiirthday!
+          Anyway, Barbie Barbie Barbie. Can't wait to see it. Good premiere-date: july 21s, AKA my biiirthday!
 
         </p>
       </div>
@@ -59,9 +58,9 @@
         </div>
         <h3><a href="#" class="a-hover">Rumors has it; Khloe Kardashian is not a "real" Kardashian!</h3>
         </a>
-        <p>Have you heard the rumor about Khloe Kardashians real father is not Robert Kardashion but a man named Alex
+        <p>Have you heard the rumor about Khloe Kardashians real father is not Robert Kardashian but a man named Alex
           Rodan. Kris Jenner has admitted to cheating during her and Roberts marriage, which fules the fire of Alex
-          Rodan being Khloes real father.</p>
+          Rodan being Khloes real father...</p>
 
       </article>
 
@@ -75,7 +74,7 @@
           </a></h3>
         <p>Anyone who's been on Britney Spears instagram can ask themself "How is she really doing?" and so do we. It's
           hard to get a hold of Britney for a interview to acutally ask HER but according to rumors she is, lets say
-          both good and bad.</p>
+          both good and bad...</p>
 
       </article>
 
@@ -110,8 +109,8 @@
           <img src="Ryan.webp" alt="Ryan Gosling" class="resizable-image-2 grayscale-effect">
         </div>
         <h3><a href="#" class="a-hover">Gosling on playing Ken: "I unleashed my inner Kenergy"</a></h3>
-        <p>We are pretty sure that Gosling was BORNED to play Ken! Who would fit better?? Dont answer that. He is the
-          perfect guy to play on male insecurities and toxic masculinity.</p>
+        <p>We are pretty sure that Gosling was BORN to play Ken! Who would fit better?? Don't answer that. He is the
+          perfect guy to play on male insecurities and toxic masculinity...</p>
       </article>
 
 
