--- a/code/index.html
+++ b/code/index.html
@@ -2,14 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Change the title below -->
     <title>News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+
       <h1 class="site-title">GameNews</h1>
       <nav class="site-nav">
         <ul class="nav-menu">
@@ -20,15 +26,82 @@
           <li class="nav-menu-items"><a> Final Fantasy XVI </a></li>
           <li class="nav-menu-items"><a> Zelda: Tears of the Kingdom </a></li>
         </ul>
+        <div class="search-box">
+          <input type="text" placeholder="Search..." class="search" />
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </div>
       </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <div class="big-news__article">
+        <a href="/">
+          <div class="zoom-img">
+            <img src="./images/bg3.jpg" alt="baldurs-gate-3-image" />
+          </div>
+          <div class="big-news__text">
+            <h1>The most beginner friendly classes</h1>
+            <p>lorem ipsum dipsum hey banana goes to pineapple</p>
+          </div>
+        </a>
+      </div>
     </section>
 
-    <section class="">
+    <section class="small-news">
       <!-- The other news  -->
+      <div class="small-news__article">
+        <a href="/">
+          <div class="small-news__image">
+            <img src="./images/diablo.jpg" alt="diablo-4-image" />
+          </div>
+          <div class="small-news__text">
+            lorem ipsum dipsum hey banana goes to pineapple
+          </div>
+        </a>
+      </div>
+      <div class="small-news__article">
+        <a href="/">
+          <div class="small-news__image">
+            <img
+              src="./images/starfield.jpg"
+              alt="starfield-image"
+              class="small-news__image"
+            />
+          </div>
+          <div class="small-news__text">
+            lorem ipsum dipsum hey banana goes to pineapple
+          </div>
+        </a>
+      </div>
+      <div class="small-news__article">
+        <a href="/">
+          <div class="small-news__image">
+            <img
+              src="./images/The_Legend_of_Zelda_Tears_of_the_Kingdom_cover.jpg"
+              alt="zelda-image"
+              class="small-news__image"
+            />
+          </div>
+          <div class="small-news__text">
+            lorem ipsum dipsum hey banana goes to pineapple
+          </div>
+        </a>
+      </div>
+      <div class="small-news__article">
+        <a href="/"
+          ><div class="small-news__image">
+            <img
+              src="./images/Final_Fantasy_XVI.png"
+              alt="ffxvi-image"
+              class="small-news__image"
+            />
+          </div>
+          <div class="small-news__text">
+            lorem ipsum dipsum hey banana goes to pineapple
+          </div>
+        </a>
+      </div>
     </section>
   </body>
 </html>
