kept defining the layout

--- a/code/index.html
+++ b/code/index.html
@@ -9,18 +9,21 @@
   </head>
   <body>
     <header>
-      <h1>logo goes here</h1>
+      <section class="logo">
+        <h1>logo goes here</h1>
+      </section>
     </header>
 
     <nav>
-      <h3 class="nav-button">HOME</h3>
-      <h3 class="nav-button">ABOUT</h3>
-      <h3 class="nav-button">CONTACT</h3>
-      <h3 class="nav-button">STH</h3>
+      <a class="nav-button" href="home">HOME</a>
+      <a class="nav-button" href="about">ABOUT</a>
+      <a class="nav-button" href="contact">CONTACT</a>
+      <a class="nav-button" href="archive">ARCHIVE</a>
     </nav>
 
     <section class="big-news">
       <h2>TITLE OF MAIN NEWS ARTICLE</h2>
+      <h4>Published 31/7/2023 16:44</h4>
       <p>Text of the news article</p>
     </section>
 
