--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <!-- Change the title below -->
-  <title>News new Site</title>
+  <title>The New New Mag</title>
   <link rel="stylesheet" href="./style.css" />
   <!-- dont forget the meta tag for responsiveness -->
 </head>
