--- a/code/index.html
+++ b/code/index.html
@@ -50,8 +50,8 @@
         <div class="flex-container">
 
           <div class="flexbox-left">
-            <h1> The new new mag is brand new!</h1>
-            <p> Welcome to new new mag, a brand new new online magazine
+            <h1> The New New Mag is brand new!</h1>
+            <p> Welcome to New New Mag, a brand new new online magazine
               depicting the art scene in various countries and contexts. <br><br> We collect the most interesting events
               of the week, and offer a wide span of interviews with artists from all over the world. Click below to join
               our release party!
@@ -73,11 +73,11 @@
       <marquee class="rollingtext" behavior="scroll" direction="left">THIS NEW NEW MAG IS BRAND NEW</marquee>
 
       <!-- first big text -->
-
-      <h1> "THIS MAGAZINE IS ABOUT ART"</h1>
-      <h1> "AND TEXT"</h1>
-      <h1> "AND OTHER POETIC STRUCTURES"</h1>
-
+      <span>
+        <h1> "THIS MAGAZINE IS ABOUT ART"</h1>
+        <h1> "AND TEXT"</h1>
+        <h1> "AND OTHER POETIC STRUCTURES"</h1>
+      </span>
 
       <!-- The first row news content -->
 
@@ -220,10 +220,11 @@
       <marquee class="rollingtext" behavior="scroll" direction="left">THIS NEW NEW MAG IS BRAND NEW</marquee>
 
       <!-- second big text -->
-
-      <h1> "THIS MAGAZINE IS ABOUT ART"</h1>
-      <h1> "AND TEXT"</h1>
-      <h1> "AND OTHER POETIC STRUCTURES"</h1>
+      <span>
+        <h1> "THIS MAGAZINE IS ABOUT ART"</h1>
+        <h1> "AND TEXT"</h1>
+        <h1> "AND OTHER POETIC STRUCTURES"</h1>
+      </span>
 
     </main>
 
