added mediaquieries and alignment

--- a/code/index.html
+++ b/code/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1,0">
+  <meta http-equiv="X-UA-Compatible" contents="ie=edge">
   <!-- Change the title below -->
   <title>Sail life magazine</title>
   <link rel="stylesheet" href="./style.css" />
@@ -15,16 +16,16 @@
     <img src="saillife.PNG" alt="logo">
     <h1>Sail Life magazine</h1>
     <div class="Links">
-      <a id="Podcasts" href="http://www.google.com">Podcasts</a>
-      <a id="Contact" href="./links.html">Contakt</a>
-      <a id="Link" href="./links.html">Links</a>
+      <a id="link" href="http://www.google.com">Podcasts</a>
+      <a id="link" href="./links.html">Contakt</a>
+      <a id="link" href="./links.html">Links</a>
     </div>
     <!-- Some kind of logo and navbar -->
   </header>
 
   <section class="big-news">
     <!-- The big news content -->
-    <img src="segelbåtar.jpeg" alt="sailing boats.">
+    <img id="bignews-pic" src="segelbåtar.jpeg" alt="sailing boats.">
     <h2>Gotland runt 2023</h2>
     <p>This year we had as much as over 300 participants in gotland runt offshore race. This years race had strong winds
       and really put all the boats to test, over 150 boats quit the race before crossing the baltic sea</p>
