Making news section and making it responsive

--- a/code/index.html
+++ b/code/index.html
@@ -33,21 +33,68 @@
         <section class="hero">
             <img class="hero-image"
                 src="https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8ZWR1Y2F0aW9ufGVufDB8fDB8fHww&auto=format&fit=crop&w=800&q=60">
-            <div class="hero-content">
-                <h2 class="hero-heading">Free education for everyone</h2>
-                <div class="hero-preview">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ac feugiat sed lectus vestibulum mattis ullamcorper velit sed. Hac
-                        habitasse
-                        platea dictumst vestibulum rhoncus est.</p>
-                    <button class="hero-button">Read</button>
+            <div class="hero-content-holder">
+                <div class="hero-content">
+                    <h2 class="hero-heading">Education for all</h2>
+                    <div class="hero-preview">
+                        <p>Education is free and accessible to all individuals regardless of their background. A
+                            comprehensive and flexible education system encourages lifelong learning, fosters
+                            creativity,
+                            and equips people with the necessary skills for personal and professional growth.</p>
+                        <button class="hero-button">Read</button>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section>
+        <section class="news-items">
 
+            <div class="news-item">
+                <img class="item-image"
+                    src="https://media.istockphoto.com/id/505412046/photo/wind-turbines-in-oiz-eolic-park.webp?b=1&s=170667a&w=0&k=20&c=HoRWwiqmy5EvTNlW6Cdx3xTVEX6KmDybnfX6NWRYH1g=">
+                <div class="item-content">
+                    <h2 class="item-heading">Renewable energy</h2>
+                    <div class="item-preview">
+                        <p>The entire society relies on clean, renewable energy sources like solar, wind, and hydro
+                            power.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="news-item">
+                <img class="item-image"
+                    src="https://media.istockphoto.com/id/1410865926/photo/paying-in-cash.webp?b=1&s=170667a&w=0&k=20&c=3xYGPqQzlQbbGq8fePuUBmTxNPnjdy8JnqOt0ylRaLE=">
+                <div class="item-content">
+                    <h2 class="item-heading">Universal basic income</h2>
+                    <div class="item-preview">
+                        <p>Every citizen receives a guaranteed basic income, ensuring that nobody falls below the
+                            poverty line.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="news-item">
+                <img class="item-image"
+                    src="https://media.istockphoto.com/id/1437830105/photo/cropped-shot-of-a-female-nurse-hold-her-senior-patients-hand-giving-support-doctor-helping.webp?b=1&s=170667a&w=0&k=20&c=QKtLmZz60KaA8cxpmt1ChfpyUArzC_MRfqoYZaOUDAQ=">
+                <div class="item-content">
+                    <h2 class="item-heading">Universal healthcare</h2>
+                    <div class="item-preview">
+                        <p>Everyone has access to high-quality healthcare without financial barriers.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="news-item">
+                <img class="item-image"
+                    src="https://media.istockphoto.com/id/691363912/sv/foto/3d-illustration-av-jorden.jpg?s=612x612&w=0&k=20&c=ebaLcULS3bJhG5Yl6ChmyIZnjOSOM5HfjAm4Obv8uAc=">
+                <div class="item-content">
+                    <h2 class="item-heading">Peaceful Coexistence</h2>
+                    <div class="item-preview">
+                        <p>Conflict resolution and diplomacy are the cornerstones of this
+                            society.</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
