--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <section class="logo">
-        <h1>logo goes here</h1>
+        <img src="terriertimes1.png" alt="Terrier Times logo" width="700px"/>
       </section>
     </header>
 
@@ -24,7 +24,7 @@
     <section class="big-news">
       <h2>TITLE OF MAIN NEWS ARTICLE</h2>
       <h4>Published 31/7/2023 16:44</h4>
-      <p>Text of the news article</p>
+      <p class="main-news">Text of the news article</p>
     </section>
 
     <section class="news-grid">
