--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <img src="bluelogo.JPG" alt="logo">
+    <img class="logo" src="./bluelogo.JPG" alt="logo">
     <h1>Sail Life magazine</h1>
     <div class="Links">
       <a id="link" href="http://www.google.com">Podcasts</a>
@@ -25,7 +25,7 @@
 
   <section class="big-news">
     <!-- The big news content -->
-    <img id="IMG_5670.JPG" src="segelbåtar.jpeg" alt="sailing boats.">
+    <img id="big-newsimg" src="./IMG_5670.JPG" alt="sailboat" />
     <h2>Gotland runt 2023</h2>
     <p>This year we had as much as over 300 participants in gotland runt offshore race. This years race had strong winds
       and really put all the boats to test, over 150 boats quit the race before crossing the baltic sea</p>
@@ -33,7 +33,7 @@
 
   <div class="smaller-news1">
     <section class="small news1">
-      <img src="rutt.jpeg" alt="map of racetrack">
+      <img src="./IMG_5674.JPG" alt="map of racetrack" />
       <h2>Classics boats in the race.</h2>
       <p>New for this year is that all the classic boats gets their own track, they dont have to round the island
         instead
@@ -42,7 +42,7 @@
     </section>
 
     <section class="small news2">
-      <img src="IMG_5688.JPG" alt="sailboat with boroken mast">
+      <img src="./IMG_5688.JPG" alt="sailboat with boroken mast">
       <h2>Strong winds and damaged boats</h2>
       <p>The gale force winds really put the boats to test. And a lot of boats got damaged, 2 boats broke their masts
         and
@@ -51,7 +51,7 @@
     </section>
 
     <section class="small news3">
-      <img src="IMG_5689.JPG" alt="boat drifting at sea">
+      <img src="./IMG_5681.JPG" alt="boat drifting at sea">
       <h2>Crew got recued at sea</h2>
       <p>Team Pandion lost their rudder and in the string winds the situation got really dangerous so swedish coastguard
         rescued the crew who unfortetly had to abandoned their boat. When the wind and sea conditions where better a
@@ -60,14 +60,14 @@
 
 
     <section class="small news4">
-      <img src="IMG_5689.JPG" alt="catamatan at sea">
+      <img src="./IMG_5677.JPG" alt="catamatan at sea">
       <h2>Allegra wins her class</h2>
       <p>The biggest catamaran in the race was the first boat to finish the race and she did that in style, 12 hours
         before the rest of the fleet, she won her class.</p>
     </section>
 
     <section class="small news5">
-      <img src="IMG_5680.JPG" alt="sailboat at sea">
+      <img src="./IMG_5693.JPG" alt="sailboat at sea">
       <h2>Wet Job was really flying</h2>
       <p>Team wet job has been sailing together for years and really know their boat well. Wet job had a blast in these
         strong winds and when they rounded the southern part of gotland the boat really had all the winds she was built
@@ -75,9 +75,9 @@
     </section>
 
     <section class="small news6">
-      <img src="IMG_5675.JPG" alt="the winning sailboat">
+      <img src="./IMG_5680.JPG" alt="the winning sailboat">
       <h2>The winner of the race</h2>
-      <p>This years overall winner is wetjob who even thou sha had some mishaps with an undfortiently jibe on her way
+      <p>This years overall winner is wetjob who even thou she had some mishaps with an undfortiently jibe on her way
         home
         wich cost her alot of valuable time managed to keep her lead all the way till the Finnish line. Good job Wetjob!
       </p>
