made some changes

--- a/code/index.html
+++ b/code/index.html
@@ -15,34 +15,57 @@
     </header>
 
     <nav>
-      <a class="nav-button" href="home">HOME</a>
-      <a class="nav-button" href="about">ABOUT</a>
-      <a class="nav-button" href="contact">CONTACT</a>
-      <a class="nav-button" href="archive">ARCHIVE</a>
+      <a class="nav-button" href="index.html">HOME</a>
+      <a class="nav-button" href="about.html">ABOUT</a>
+      <a class="nav-button" href="contact.html">CONTACT</a>
+      <a class="nav-button" href="archive.html">ARCHIVE</a>
     </nav>
 
     <section class="big-news">
-      <h2>TITLE OF MAIN NEWS ARTICLE</h2>
+      <h2 class="main-news-title">TITLE OF MAIN NEWS ARTICLE</h2>
       <h4>Published 31/7/2023 16:44</h4>
-      <p class="main-news">Text of the news article</p>
+      <p class="main-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="main-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="main-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
 
     <section class="news-grid">
       <article class="grid-cell">
         <h3>TITLE OF GRID ARTICLE</h3>
-        <p>Text of grid article</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
       </article>
       <article class="grid-cell">
         <h3>TITLE OF GRID ARTICLE</h3>
-        <p>Text of grid article</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </article>
       <article class="grid-cell">
         <h3>TITLE OF GRID ARTICLE</h3>
-        <p>Text of grid article</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </article>
       <article class="grid-cell">
         <h3>TITLE OF GRID ARTICLE</h3>
-        <p>Text of grid article</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </article>
     </section>
   </body>
