tried to start out with a contact form

--- a/code/about.html
+++ b/code/about.html
@@ -21,8 +21,7 @@
     </nav>
 
     <section class="big-news">
-      <h2 class="main-news-title">TITLE OF MAIN NEWS ARTICLE</h2>
-      <h4>Published 31/7/2023 16:44</h4>
+      <h2 class="main-news-title">ABOUT</h2>
       <p class="main-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
