--- a/code/contact.html
+++ b/code/contact.html
@@ -21,23 +21,16 @@
     </nav>
 
     <section class="big-news">
-      <h2 class="main-news-title">TITLE OF MAIN NEWS ARTICLE</h2>
-      <h4>Published 31/7/2023 16:44</h4>
-      <p class="main-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="main-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="main-news">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2 class="main-news-title">CONTACT</h2>
+      <p class="main-news">Got any questions, requests or fan mail for the dogs? Do not hesitate to contact us!</p>
+        <form id="contact-form">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" cols="1"/>
+            <label for="email">E-mail</label>
+            <input type="email" id="email" name="email" cols="1" />
+            <label for="feedback">Feedback</label>
+            <input type="textarea" id="feedback" name="feedback" rows="1" cols="20" placeholder="Write your feedback here." />
+            </form>
     </section>
 
     <section class="news-grid">
